# AutoWebsiteTester

./: README.md  pyproject.toml
autowebsitetester/: __init__.py  cli.py  config.py  runner.py  types.py
autowebsitetester/agents/: executor.py  navigator.py  oracle.py  reporter.py  triage.py
autowebsitetester/algorithms/: __init__.py  coverage_guided_exploration.py  ddmin_min_repro.py
autowebsitetester/browser/: actions.py  detectors.py  session.py  snapshot.py
autowebsitetester/report/: render_html.py  render_md.py
autowebsitetester/schemas/: results.schema.json
benchmarks/: exploration_metrics.py
examples/: config.example.toml
tests/: test_coverage_exploration.py  test_ddmin.py  test_triage.py
